--- a/face-id-offline/App.xaml
+++ b/face-id-offline/App.xaml
@@ -4,7 +4,7 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="face_id_offline.App">
+             x:Class="FaceIdOffline.App">
     <Application.Resources>
 
     </Application.Resources>
