--- a/face-id-offline/MainPage.xaml
+++ b/face-id-offline/MainPage.xaml
@@ -4,7 +4,7 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="face_id_offline.MainPage">
+             x:Class="FaceIdOffline.MainPage">
 
     <StackLayout>
         <!-- Place new controls here -->
