--- a/face-id-offline/MainPage.xaml
+++ b/face-id-offline/MainPage.xaml
@@ -7,7 +7,7 @@
              x:Class="FaceIdOffline.MainPage">
 
     <StackLayout Padding="0" Spacing="10">
-        <Button Text="Pick photo" HeightRequest="60" Clicked="Button_Clicked" />
+        <Button Text="Pick photo" HeightRequest="60" Clicked="Button_Clicked_1" />
         <Label x:Name="classify"></Label>
     </StackLayout>
 
